# scaffold-lint

./: .gitignore  .hermes-seal.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml  sbom.cdx.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/scaffold_lint/: __init__.py  cli.py  linter.py
src/scaffold_lint/detectors/: __init__.py  base.py  scaffold_rules.py
tests/: test_graceful_degrade.py  test_scaffold_rules.py
